--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
         crossorigin="anonymous"></script>
 
     <script>
-        const socket = io('http://localhost:8080');
+        const socket = io('https://react-socket.herokuapp.com/');
 
         const formulario = document.querySelector('#miFormulario');
         const mensajes = document.querySelector('#misMensajes');
