--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-    <title>MiniChat</title>
+    <title>Cube</title>
 </head>
 
 <body class="container">
 
-    <h3>Minichat </h3>
+    <h3>Empresaurios </h3>
     <hr />
 
     <form id="miFormulario">
